--- a/Angular Project/package.json
+++ b/Angular Project/package.json
@@ -48,6 +48,7 @@
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "~5.4.0",
+    "rxjs-compat": "^6.3.3",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.1.4",
