--- a/Angular Project/package.json
+++ b/Angular Project/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^7.0.1",
     "@angular/platform-browser-dynamic": "^7.0.1",
     "@angular/router": "^7.0.1",
+    "@ngx-pwa/local-storage": "^7.1.0",
     "boostrap": "^2.0.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
